--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,7 +1,30 @@
+# --------------------------------------------------------
+# Application Info
+# --------------------------------------------------------
 spring.application.name=demo
+
+# --------------------------------------------------------
+# Database Config
+# --------------------------------------------------------
 spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password= Mwslftwps0128!
+spring.datasource.password=Mwslftwps0128!
 
+# JPA ???????update????? OK?
 spring.jpa.hibernate.ddl-auto=update
+
+# ???? SQL??????????
 spring.jpa.show-sql=true
+
+# ? SQL ??????????
+spring.jpa.properties.hibernate.format_sql=true
+
+# --------------------------------------------------------
+# Logging Level????????? INFO ?????
+# --------------------------------------------------------
+logging.level.com.example.demo=INFO
+
+# ?? SQL ??????? SQL ?????????
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
