Add controller logging with AOP and improve application config.

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -4,27 +4,26 @@
 spring.application.name=demo
 
 # --------------------------------------------------------
-# Database Config
+# Default: H2 in-memory database (for easy run after clone)
 # --------------------------------------------------------
-spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Mwslftwps0128!
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
-# JPA ???????update????? OK?
-spring.jpa.hibernate.ddl-auto=update
-
-# ???? SQL??????????
+# JPA (Hibernate) - create tables in memory on startup, drop on shutdown
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-
-# ? SQL ??????????
 spring.jpa.properties.hibernate.format_sql=true
 
-# --------------------------------------------------------
-# Logging Level????????? INFO ?????
-# --------------------------------------------------------
-logging.level.com.example.demo=INFO
+# H2 console (optional, useful for debugging)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
-# ?? SQL ??????? SQL ?????????
-# logging.level.org.hibernate.SQL=DEBUG
-# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# ? close Open Session In View
+spring.jpa.open-in-view=false
 
+# --------------------------------------------------------
+# Logging
+# --------------------------------------------------------
+logging.level.com.guc.studentmanagement=INFO
